--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,14 +1,3 @@
-.o-header {
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.a-site-title {
-    font-size: 54pt;
-    font-weight: bold;
-}
-
 /* navbar */
 .o-links {
     display: flex;
@@ -76,6 +65,10 @@
 .a-page-title {
     text-align: center;
 }
+.o-yearbook-filter {
+    display: flex;
+    justify-content: space-evenly;
+}
 .o-yearbook-students {
     display: flex;
     flex-wrap: wrap;
@@ -103,4 +96,14 @@
     text-align: center;
 }
 
+.o-header {
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.a-site-title {
+    font-size: 54pt;
+    font-weight: bold;
+}
 
