--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,6 +62,11 @@
 .a-cmo-tagline {
     text-align: center;
 }
+.o-sub-courses {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
 .a-page-title {
     text-align: center;
 }
