--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,15 @@
+:root {
+    --color-main: #4D4F9C;
+    --color-accent: #C4314B;
+
+    --color-cmo: #44B732;
+    --color-nmd: #E02C31;
+    --color-avd: #FFC400;
+    --color-gmb: #A8A8A8;
+
+    --color-white: #fafaf5;
+    --color-black: #00000F;
+}
 /* navbar */
 .o-links {
     display: flex;
