--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,24 +11,13 @@
     --color-black: #00000F;
 }
 /* navbar */
-.o-links {
-    display: flex;
-    justify-content: center;
-}
-.a-link {
-    padding: 1px 30px;
-    width: 160px;
-    border: 1px solid black;
-    border-radius: 5px;
-    text-align: center;
-    margin: 1rem;
-}
+
 
 /* home content */
 .o-home {
     display: flex;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .o-home-card {
@@ -114,13 +103,69 @@
 }
 
 .o-header {
+    display: flex;
+    flex-direction: column;
+}
+.m-headerTop {
     height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10vh;
 }
-.a-site-title {
-    font-size: 54pt;
+.m-headerBottom {
+    display: flex;
+    justify-content: center;
+    font-size: 20pt;
     font-weight: bold;
+    color: var(--color-accent);
 }
+.a-site-logo {
+    height: 125px;
+    width: auto;
+    padding: 0px 40px;
+}
+.a-subHeader {
+    line-height: 0.75;
+    padding: 0 16px;
+}
+.a-line {
+    background-color: var(--color-accent);
+    height: 4px;
+    width: 25vw;
+    align-self: flex-end;
+}
+.a-lineLeft {
+    border-radius: 9px 0px 0px 9px;
+
+}
+.a-lineRight {
+    border-radius: 0px 9px 9px 0px;
+
+}
+/* link styling  */
+
+
+.a-link {
+    padding: 3px 30px;
+    width: 160px;
+    border-radius: 18px;
+    text-align: center;
+    margin: 1rem;
+    align-self: flex-end;
+    background-color: var(--color-accent);
+}
+
+
+a.a-link:link,
+a.a-link:visited
+{
+    color: var(--color-white);
+    text-decoration: none;
+}
+a.a-link:hover {
+    border: 1px solid var(--color-black);
+}
+
+
 
