--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,10 +1,66 @@
 .o-header {
+    display: flex;
+    flex-direction: column;
+}
+.m-headerTop {
     height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10vh;
 }
-.a-site-title {
-    font-size: 54pt;
+.m-headerBottom {
+    display: flex;
+    justify-content: center;
+    font-size: 20pt;
     font-weight: bold;
+    color: var(--color-accent);
 }
+.a-site-logo {
+    height: 125px;
+    width: auto;
+    padding: 0px 40px;
+}
+.a-subHeader {
+    line-height: 0.75;
+    padding: 0 16px;
+}
+.a-line {
+    background-color: var(--color-accent);
+    height: 4px;
+    width: 25vw;
+    align-self: flex-end;
+}
+.a-lineLeft {
+    border-radius: 9px 0px 0px 9px;
+
+}
+.a-lineRight {
+    border-radius: 0px 9px 9px 0px;
+
+}
+/* link styling  */
+
+
+.a-link {
+    padding: 3px 30px;
+    width: 160px;
+    border-radius: 18px;
+    text-align: center;
+    margin: 1rem;
+    align-self: flex-end;
+    background-color: var(--color-accent);
+}
+
+
+a.a-link:link,
+a.a-link:visited
+{
+    color: var(--color-white);
+    text-decoration: none;
+}
+a.a-link:hover {
+    border: 1px solid var(--color-black);
+}
+
+
