--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,21 @@
     --color-white: #fafaf5;
     --color-black: #00000F;
 }
+
+/* Background colors  */
+
+.a-bg-color-cmo {
+    background-color: var(--color-cmo);
+}
+.a-bg-color-nmd {
+    background-color: var(--color-nmd);
+}
+.a-bg-color-avd {
+    background-color: var(--color-avd);
+}
+.a-bg-color-gmb {
+    background-color: var(--color-gmb);
+}
 /* navbar */
 
 
@@ -21,23 +36,70 @@
 }
 
 .o-home-card {
-    flex: 14% 0 0;
-    margin: 1rem;
+    /* flex: 14% 0 0;
+    margin: 1rem; */
+    margin-top: 35px;
+}
+.m-img-container {
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+
 }
 .a-home-card-image {
     width: 100%;
-    height: 130px;
+    height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
 }
+
+.m-home-card-tag {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border: 8px solid var(--color-white);
+    height: 30%;
+    width: 30%;
+    border-radius: 50%;
+}
+
+.a-home-card-tag {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-white);
+}
+
+
 .a-home-card-title {
     text-align: center;
 }
 .a-home-card-subtitle {
     text-align: center;
+    font-size: 13pt;
+    color: var(--color-accent);
+    margin-top: 2rem;
+
 }
 .a-home-explination {
+    margin-top: 1rem;
+
     font-size: 14px;
+}
+a.o-home-card:link,
+a.o-home-card:visited {
+    color: var(--color-main);
+    text-decoration: none;
+}
+
+.o-home-card:hover {
+        transform: scale(1.04);
 }
 .a-page-title {
     text-align: center;
@@ -102,10 +164,13 @@
     text-align: center;
 }
 
+/* Header */
+
 .o-header {
     display: flex;
     flex-direction: column;
 }
+
 .m-headerTop {
     height: 20vh;
     display: flex;
@@ -113,6 +178,7 @@
     align-items: center;
     margin-top: 10vh;
 }
+
 .m-headerBottom {
     display: flex;
     justify-content: center;
@@ -120,29 +186,38 @@
     font-weight: bold;
     color: var(--color-accent);
 }
+
 .a-site-logo {
     height: 125px;
     width: auto;
     padding: 0px 40px;
 }
+
 .a-subHeader {
     line-height: 0.75;
     padding: 0 16px;
 }
+
+/* Sub header LINE styling */
+
 .a-line {
     background-color: var(--color-accent);
     height: 4px;
     width: 25vw;
     align-self: flex-end;
 }
+
 .a-lineLeft {
     border-radius: 9px 0px 0px 9px;
 
 }
+
 .a-lineRight {
     border-radius: 0px 9px 9px 0px;
 
 }
+
+
 /* link styling  */
 
 
@@ -154,18 +229,38 @@
     margin: 1rem;
     align-self: flex-end;
     background-color: var(--color-accent);
+    font-weight: bold;
 }
-
 
 a.a-link:link,
-a.a-link:visited
-{
+a.a-link:visited {
     color: var(--color-white);
     text-decoration: none;
+    border: 4px solid var(--color-accent);
+
 }
+
 a.a-link:hover {
-    border: 1px solid var(--color-black);
+    border: 4px solid var(--color-accent);
+    color: var(--color-accent);
+    background-color: var(--color-white);
+
 }
 
 
-
+.o-footer {
+    width: 100vw;
+    height: 20vh;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-main);
+}
+.a-footer-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+body {
+    margin: 0;
+    padding: 0;
+}
