--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,10 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 @import "variables.css";
 @import "home.css";
 @import "cmo-home.css";
 @import "yearbook.css";
 @import "header.css";
+@import "footer.css";
