--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,7 +1,10 @@
+/* Header */
+
 .o-header {
     display: flex;
     flex-direction: column;
 }
+
 .m-headerTop {
     height: 20vh;
     display: flex;
@@ -9,6 +12,7 @@
     align-items: center;
     margin-top: 10vh;
 }
+
 .m-headerBottom {
     display: flex;
     justify-content: center;
@@ -16,29 +20,38 @@
     font-weight: bold;
     color: var(--color-accent);
 }
+
 .a-site-logo {
     height: 125px;
     width: auto;
     padding: 0px 40px;
 }
+
 .a-subHeader {
     line-height: 0.75;
     padding: 0 16px;
 }
+
+/* Sub header LINE styling */
+
 .a-line {
     background-color: var(--color-accent);
     height: 4px;
     width: 25vw;
     align-self: flex-end;
 }
+
 .a-lineLeft {
     border-radius: 9px 0px 0px 9px;
 
 }
+
 .a-lineRight {
     border-radius: 0px 9px 9px 0px;
 
 }
+
+
 /* link styling  */
 
 
@@ -50,17 +63,22 @@
     margin: 1rem;
     align-self: flex-end;
     background-color: var(--color-accent);
+    font-weight: bold;
 }
-
 
 a.a-link:link,
-a.a-link:visited
-{
+a.a-link:visited {
     color: var(--color-white);
     text-decoration: none;
+    border: 4px solid var(--color-accent);
+
 }
+
 a.a-link:hover {
-    border: 1px solid var(--color-black);
+    border: 4px solid var(--color-accent);
+    color: var(--color-accent);
+    background-color: var(--color-white);
+
 }
 
 
