--- a/public/css/app.css
+++ b/public/css/app.css
@@ -85,10 +85,12 @@
     font-size: 13pt;
     color: var(--color-accent);
     margin-top: 2rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid var(--color-white);
 
 }
 .a-home-explination {
-    margin-top: 1rem;
 
     font-size: 14px;
 }
@@ -98,23 +100,74 @@ a.o-home-card:visited {
     text-decoration: none;
 }
 
-.o-home-card:hover {
-        transform: scale(1.04);
+.o-home-card:hover img{
+    transform: scale(1.04); /* zoom image on hover */
 }
-.a-page-title {
+.o-home-card:hover p{
+    font-weight: 370;
+    /* color: var(--color-accent); */
+}
+.o-home-card:hover h3{
+    /* color: var(--color-main); */
+    border-bottom: 1px solid var(--color-accent);
+}
+.o-home-card img {
+    transition: transform .4s;
+}
+/* sub course filter */
+.o-sub-courses {
+    margin-top: 2rem;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.a-sub-course-title {
+    background-color: var(--color-main);
+    color: var(--color-white);
     text-align: center;
+    border-radius: 18px;
+    padding:  1px 0;
+    font-weight: bold;
 }
 
+a.a-sub-course-title:link,
+a.a-sub-course-title:visited {
+    color: var(--color-white);
+    text-decoration: none;
+    border: 4px solid var(--color-main);
+
+}
+
+a.a-sub-course-title:hover {
+    border: 4px solid var(--color-main);
+    color: var(--color-main);
+    background-color: var(--color-white);
+
+}
 .o-cmo-portfolio {
+    width: 80%;
+    max-width: 850px;
+    margin: 0 auto;
+    margin-top: 2rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 90vw;
-    margin: auto;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 
+
+
 .o-card {
-    flex: 23% 0 0;
+    /* flex: 23% 0 0; */
+}
+.o-card-left {
+    display: block;
+    width: 38%;
+}
+.o-card-right {
+    display: block;
+    width: 28%;
 }
 .a-cmo-image {
     width: 100%;
@@ -125,11 +178,7 @@ a.o-home-card:visited {
 .a-cmo-tagline {
     text-align: center;
 }
-.o-sub-courses {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-}
+
 .a-page-title {
     text-align: center;
 }
@@ -169,6 +218,7 @@ a.o-home-card:visited {
 .o-header {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .m-headerTop {
@@ -230,10 +280,11 @@ a.o-home-card:visited {
 
 .a-link {
     padding: 3px 30px;
-    width: 160px;
+    /* width: 150px; */
     border-radius: 18px;
     text-align: center;
-    margin: 1rem;
+    /* margin: 1rem; */
+    margin-top: 1rem;
     align-self: flex-end;
     background-color: var(--color-accent);
     font-weight: bold;
@@ -255,6 +306,7 @@ a.a-link:hover {
 }
 
 
+
 .o-footer {
     margin-top: 2rem;
     width: 100vw;
@@ -271,4 +323,8 @@ a.a-link:hover {
 body {
     margin: 0;
     padding: 0;
+}
+
+.container {
+    width: 85% !important;
 }
