--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -3,12 +3,12 @@
 .o-header {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .m-headerTop {
     display: flex;
     justify-content: center;
-    width: 100%;
     align-items: center;
     margin-top: 10vh;
 }
@@ -65,10 +65,11 @@
 
 .a-link {
     padding: 3px 30px;
-    width: 160px;
+    /* width: 150px; */
     border-radius: 18px;
     text-align: center;
-    margin: 1rem;
+    /* margin: 1rem; */
+    margin-top: 1rem;
     align-self: flex-end;
     background-color: var(--color-accent);
     font-weight: bold;
@@ -88,5 +89,6 @@ a.a-link:hover {
     background-color: var(--color-white);
 
 }
+
 
 
