--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -57,10 +57,12 @@
     font-size: 13pt;
     color: var(--color-accent);
     margin-top: 2rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid var(--color-white);
 
 }
 .a-home-explination {
-    margin-top: 1rem;
 
     font-size: 14px;
 }
@@ -70,6 +72,17 @@ a.o-home-card:visited {
     text-decoration: none;
 }
 
-.o-home-card:hover {
-        transform: scale(1.04);
+.o-home-card:hover img{
+    transform: scale(1.04); /* zoom image on hover */
+}
+.o-home-card:hover p{
+    font-weight: 370;
+    /* color: var(--color-accent); */
+}
+.o-home-card:hover h3{
+    /* color: var(--color-main); */
+    border-bottom: 1px solid var(--color-accent);
+}
+.o-home-card img {
+    transition: transform .4s;
 }
