made model responsive + move thumbnails to image table

--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -9,6 +9,8 @@
 
     --color-white: #fafaf5;
     --color-black: #00000F;
+
+    --box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.57);
 }
 
 /* Background colors  */
