--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,8 @@
 
     --color-white: #fafaf5;
     --color-black: #00000F;
+
+    --box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.57);
 }
 
 /* Background colors  */
@@ -147,28 +149,16 @@ a.a-sub-course-title:hover {
 
 .o-cmo-portfolio {
     width: 80%;
-    max-width: 850px;
+    max-width: 840px;
     margin: 0 auto;
     margin-top: 2rem;
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    /* grid-template-columns: 3fr 2fr; */
     /* grid-template-columns:repeat(auto-fill, minmax(250px,1fr)); */
+    /* grid-template-columns: repeat(auto-fill, minmax(250px, 3fr)); */
     grid-template-columns: 3fr 2fr;
     grid-gap: 1rem;
     grid-auto-rows: 200px;
-
-
-
-}
-
-.box {
-    position: relative;
-}
-
-.aa {
-    position: absolute;
-    top: 3;
-    left: 4;
 }
 
 .m-portait {
@@ -228,7 +218,7 @@ a.a-sub-course-title:hover {
 }
 
 .o-modal-content {
-
+    box-shadow: var(--box-shadow);
     align-self: center;
     background-color: var(--color-white);
     padding: 1rem;
@@ -244,22 +234,68 @@ a.a-sub-course-title:hover {
        object-fit: cover;
 }
 
-.close {
-    float: right;
-    width: 1.5rem;
-    line-height: 1.5rem;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 0.35rem;
-    background-color: lightgray;
-}
-
 .show {
     opacity: 1;
     visibility: visible !important;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+.a-cmo-portfolio-description {
+    padding-bottom: 2rem;
+    box-sizing: border-box;
+}
+
+.m-cmo-portfolioBtn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+
+/* link styling  */
+.a-cmo-portfolioBtn {
+    color: var(--color-white);
+    background-color: var(--color-accent);
+    font-size: 14pt;
+    font-weight: bold;
+    padding: 1px 30px;
+    border-radius: 20px;
+    border: 4px solid var(--color-accent);
+    cursor: pointer;
+}
+
+a.a-cmo-portfolioBtn:link,
+a.a-cmo-portfolioBtn:visited {
+    color: var(--color-white);
+    text-decoration: none;
+    border: 4px solid var(--color-accent);
+
+}
+
+a.a-cmo-portfolioBtn:hover {
+    border: 4px solid var(--color-accent);
+    color: var(--color-accent);
+    background-color: var(--color-white);
+    text-decoration: none;
+
+
+}
+
+/* close btn */
+i.fa-times {
+    cursor: pointer;
+
+    font-size: 24pt;
+    color: var(--color-accent);
+}
+
+/* responsive grid */
+@media only screen and (max-width: 760px) {
+    .o-cmo-portfolio {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 3fr));
+}
+  }
 .a-page-title {
     text-align: center;
 }
