--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,7 @@ body {
 @import "variables.css";
 @import "home.css";
 @import "cmo-home.css";
+@import "cmo-detail.css";
 @import "yearbook.css";
 @import "header.css";
 @import "footer.css";
