--- a/resources/css/cmo-home.css
+++ b/resources/css/cmo-home.css
@@ -6,7 +6,7 @@
 }
 
 .a-sub-course-title {
-    background-color: var(--color-main);
+    background-color: var(--color-accent);
     color: var(--color-white);
     text-align: center;
     border-radius: 18px;
@@ -18,13 +18,13 @@ a.a-sub-course-title:link,
 a.a-sub-course-title:visited {
     color: var(--color-white);
     text-decoration: none;
-    border: 4px solid var(--color-main);
+    border: 4px solid var(--color-accent);
 
 }
 
 a.a-sub-course-title:hover {
-    border: 4px solid var(--color-main);
-    color: var(--color-main);
+    border: 4px solid var(--color-accent);
+    color: var(--color-accent);
     background-color: var(--color-white);
 
 }
