--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -19,6 +19,8 @@
     --color-white: #fafaf5;
     --color-black: #00000F;
 
+    --color-border: #FCE28A;
+    --color-portfolio-home-text: #F38181;
     --box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.57);
 }
 
