--- a/public/css/app.css
+++ b/public/css/app.css
@@ -189,13 +189,19 @@ a.a-sub-course-title:hover {
 
 } */
 
-
+.m-cmo-img:hover img {
+    transform: scale(1.02);
+    overflow: hidden;
+}
 .a-cmo-image {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+    border-radius: 1rem;
+    cursor: pointer;
 }
+
 
 .a-cmo-card-name {
     text-align: center;
