--- a/resources/css/cmo-home.css
+++ b/resources/css/cmo-home.css
@@ -63,12 +63,18 @@ a.a-sub-course-title:hover {
 
 } */
 
-
+.m-cmo-img:hover img {
+    transform: scale(1.02);
+    overflow: hidden;
+}
 .a-cmo-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 1rem;
+    cursor: pointer;
 }
+
 
 .a-cmo-card-name {
     text-align: center;
