worked on job-page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,5 +12,6 @@ body {
 @import "nmd-home.css";
 @import "cmo-detail.css";
 @import "yearbook.css";
+@import "jobs.css";
 @import "header.css";
 @import "footer.css";
