--- a/public/css/app.css
+++ b/public/css/app.css
@@ -504,6 +504,56 @@ a.o-nmd-card:hover {
     padding-top: 0.7rem;
 }
 
+.o-jobcontainer {
+    padding-top: 2rem;
+    width: 80%;
+    margin: 0 auto;
+}
+.o-job-card {
+    border: 3px solid var(--color-border);
+    border-radius: 1.4rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+.a-job-title {
+    color: var(--color-accent);
+    font-size: 24pt;
+    font-weight: 600;
+}
+.a-job-hashtags {
+    color: var(--color-accent);
+}
+.a-job-description {
+    color: var(--color-portfolio-home-text);
+}
+.o-job-deadline {
+    display: flex;
+    align-items: center;
+}
+.a-job-deadline {
+    color: var(--color-accent);
+    font-weight: 800;
+}
+.o-job-contact {
+    display: flex;
+    justify-content: end;
+}
+.a-job-contact {
+    background-color: var(--color-accent);
+    color: var(--color-white);
+    width: 8rem;
+    border-radius: 6rem;
+    padding: 0.5rem;
+    display: block;
+    font-weight: 800;
+    text-align: center;
+}
+.o-job-date {
+    display: flex;
+    justify-content: end;
+    color: var(--color-portfolio-home-text);
+
+}
 /* Header */
 
 .o-header {
