worked on new-job-page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -509,6 +509,21 @@ a.o-nmd-card:hover {
     width: 80%;
     margin: 0 auto;
 }
+.m-job-new-link {
+    display: flex;
+    justify-content: flex-end;
+    color: var(--color-accent);
+    font-weight: 800;
+    margin-bottom: 1rem;
+}
+a.a-job-new-link:hover {
+    color: var(--color-accent);
+    text-decoration: none;
+}
+a.a-job-new-link:link {
+    color: var(--color-accent);
+}
+
 .o-job-card {
     border: 3px solid var(--color-border);
     border-radius: 1.4rem;
@@ -536,7 +551,7 @@ a.o-nmd-card:hover {
 }
 .o-job-contact {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 .a-job-contact {
     background-color: var(--color-accent);
@@ -553,6 +568,61 @@ a.o-nmd-card:hover {
     justify-content: end;
     color: var(--color-portfolio-home-text);
 
+}
+.o-job-new-container {
+    padding-top: 2rem;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    border: 3px solid var(--color-border);
+    border-radius: 3rem;
+}
+.m-new-job-input {
+    display: flex;
+    justify-content: flex-end;
+}
+.a-new-job-label {
+    font-weight: 700;
+    color: var(--color-accent);
+    padding-right: 1rem;
+}
+.a-new-job-input {
+    background-color: hsla(0, 47%, 95%, 25);
+    border: none;
+    border-radius: 9rem;
+    padding-left: 1rem;
+    color: var(--color-accent);
+    width: 250px;
+    height: 40px;
+    margin-bottom: 1rem;
+}
+.a-new-job-input-deadline {
+    text-align: center;
+}
+.a-new-job-input-textArea {
+    background-color: hsla(0, 47%, 95%, 25);
+    border: none;
+    border-radius: 1rem;
+    padding-left: 1rem;
+    color: var(--color-accent);
+    width: 250px;
+    height: 250px;
+    margin-bottom: 1rem;
+}
+.o-new-job-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.a-new-job-button {
+    background-color: var(--color-accent);
+    border-radius: 9rem;
+    padding: 0.5rem;
+    width: 200px;
+    border: none;
+    color: var(--color-white);
+    font-weight: 700;
+    margin-bottom: 1rem;
 }
 /* Header */
 
