--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,5 +13,6 @@ body {
 @import "cmo-detail.css";
 @import "yearbook.css";
 @import "jobs.css";
+@import "jobs-new.css";
 @import "header.css";
 @import "footer.css";
